tests/query_errors/window_event_in_target/error.txt
Error: 
    9 |   "min": math::min(event.number + 1, 0),
      |                    ^^^^^^^^^^^^ References to `event` or `$` are not allowed in this context
